// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a default state 1`] = `
<button>
  <span>
    Default button
  </span>
</button>
`;

exports[`Button renders anchor when href prop is provided 1`] = `
<a
  href="https://www.bing.com"
  role="button"
>
  <span>
    Default button
  </span>
</a>
`;
